bk_ida/gobmkida/c1/gtp_final_status_list
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_final_status_list/src/interface/play_gtp.c:3114:34: error: use of undeclared identifier 'qword_495040'
if ( !strcmp( s1, ( const char *)qword_495040[v2]) ) 
                                 ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_final_status_list/src/interface/play_gtp.c:3115:6: error: use of undeclared identifier 'dword_495008'
v1 = dword_495008[v2]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/gtp_final_status_list/src/obj/2/play_gtp.o] Error 1
